@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Text_Editor.cxx,v 1.9.2.12 2002/11/05 19:53:50 matthiaswm Exp $"
+// "$Id: Fl_Text_Editor.cxx,v 1.9.2.13 2002/11/08 15:57:10 easysw Exp $"
 //
 // Copyright 2001-2002 by Bill Spitzak and others.
 // Original code Copyright Mark Edel.  Permission to distribute under
@@ -29,6 +29,7 @@
 #include <ctype.h>
 #include <FL/Fl.H>
 #include <FL/Fl_Text_Editor.H>
+#include <FL/fl_ask.H>
 
 
 Fl_Text_Editor::Fl_Text_Editor(int X, int Y, int W, int H,  const char* l)
@@ -458,6 +459,10 @@ int Fl_Text_Editor::handle(int event) {
       return handle_key();
 
     case FL_PASTE:
+      if (!Fl::event_text()) {
+        fl_beep();
+	return 1;
+      }
       buffer()->remove_selection();
       if (insert_mode()) insert(Fl::event_text());
       else overstrike(Fl::event_text());
@@ -477,5 +482,5 @@ int Fl_Text_Editor::handle(int event) {
 }
 
 //
-// End of "$Id: Fl_Text_Editor.cxx,v 1.9.2.12 2002/11/05 19:53:50 matthiaswm Exp $".
+// End of "$Id: Fl_Text_Editor.cxx,v 1.9.2.13 2002/11/08 15:57:10 easysw Exp $".
 //
